frontend/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: stock-management
  labels:
    app: frontend
    tier: frontend
spec:
  type: ClusterIP
  sessionAffinity: None
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
